--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,14 @@
             <version>2.5</version>
         </dependency>
 
+        <!--tests-->
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>test</finalName>
